<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="40dp"
    android:paddingRight="40dp"
    tools:context=".sign.Fragment.LoginFragment">

    <ImageButton
        android:id="@+id/login_back_button"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="40dp"
        android:background="@android:color/transparent"
        android:src="@drawable/icon_back" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="95dp"
        android:text="@string/login"
        android:textColor="@color/black"
        android:textSize="24sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/id"
        android:textColor="@color/black"
        android:textSize="10dp" />

    <EditText
        android:id="@+id/login_id_editText"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="7dp"
        android:background="@drawable/sign_transparent_btn"
        android:hint="@string/get_id"
        android:paddingLeft="10dp"
        android:textSize="12dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textColor="@color/black"
        android:textSize="10dp" />

    <EditText
        android:id="@+id/login_password_editText"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="7dp"

        android:background="@drawable/sign_transparent_btn"
        android:hint="@string/get_password"
        android:paddingLeft="10dp"
        android:textSize="12dp" />

    <RadioButton
        android:id="@+id/login_autoLogin_button"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:text="@string/autoLogin"
        android:textColor="@color/black"
        android:textSize="10sp" />

    <Button
        android:id="@+id/login_login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="130dp"
        android:background="@drawable/sign_login_btn"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:textColor="@color/sign_gray"
            android:textSize="10sp" />

        <Button
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:background="@android:color/transparent"
            android:text="@string/find_password"
            android:textSize="10sp" />


    </LinearLayout>

</LinearLayout>