<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="40dp"
    android:paddingRight="40dp"
    tools:context=".sign.Fragment.LoginFragment">

    <ImageButton
        android:id="@+id/SUPassword_back_button"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="40dp"
        android:background="@android:color/transparent"
        android:src="@drawable/icon_back" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="95dp"
        android:text="@string/signUp"
        android:textColor="@color/black"
        android:textSize="24sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textColor="@color/black"
        android:textSize="10dp" />

    <EditText
        android:id="@+id/SUPassword_id_editText"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="7dp"
        android:background="@drawable/sign_transparent_btn"
        android:hint="@string/get_password"
        android:paddingLeft="10dp"
        android:textSize="12dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/check_password"
        android:textColor="@color/black"
        android:textSize="10dp" />

    <EditText
        android:id="@+id/SUPassword_checkPassword_editText"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="7dp"
        android:background="@drawable/sign_transparent_btn"
        android:hint="@string/get_password"
        android:paddingLeft="10dp"
        android:textSize="12dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="10sp"
        android:textColor="@color/red"
        android:text="@string/password_not_correct"
        android:layout_gravity="right"
        android:visibility="invisible"/>


    <Button
        android:id="@+id/SUPassword_next_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:background="@drawable/sign_login_btn"
        android:text="@string/next"
        android:textColor="@color/white"
        android:textSize="16sp" />

</LinearLayout>