<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="40dp"
    android:paddingRight="40dp"
    tools:context=".Sign.Fragment.LoginFragment">

    <ImageButton
        android:id="@+id/SUEmail_back_button"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="40dp"
        android:background="@android:color/transparent"
        android:src="@drawable/icon_back" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="95dp"
        android:text="@string/signUp"
        android:textColor="@color/black"
        android:textSize="24sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/id"
        android:textColor="@color/black"
        android:textSize="10dp" />

    <EditText
        android:id="@+id/SUEmail_id_editText"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/sign_transparent_btn"
        android:hint="@string/get_id"
        android:paddingLeft="10dp"
        android:textSize="12dp" />

    <Button
        android:id="@+id/SUEmail_authcode_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="239dp"
        android:background="@drawable/sign_login_btn"
        android:text="@string/output_auth_code"
        android:textColor="@color/white"
        android:textSize="16sp" />

</LinearLayout>