<?xml version="1.0" encoding="utf-8"?>
<layout>
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        tools:context=".writing.writingFragment">

        <EditText
            android:id="@+id/writing_title_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/get_title"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/writing_location_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/search_location"
            android:textColor="@color/black"
            android:textSize="15sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/writing_title_editText" />

        <Button
            android:id="@+id/writing_location_button"
            android:layout_width="90dp"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/writing_round_button"
            android:text="@string/location_point"
            android:textSize="12sp"
            app:layout_constraintLeft_toRightOf="@id/writing_location_textView"
            app:layout_constraintTop_toBottomOf="@id/writing_title_editText" />

        <TextView
            android:id="@+id/writing_category_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/category"
            android:textColor="@color/black"
            android:textSize="15sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/writing_location_textView" />

        <Button
            android:id="@+id/writing_delivery_button"
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:layout_marginLeft="22dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/writing_click_button"
            android:backgroundTint="@color/writing_gray"
            android:text="@string/delivery"
            android:textSize="12sp"
            app:layout_constraintLeft_toRightOf="@id/writing_category_textView"
            app:layout_constraintTop_toBottomOf="@id/writing_location_textView" />

        <Button
            android:id="@+id/writing_goods_button"
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/writing_round_button"
            android:text="@string/goods"
            android:textSize="12sp"
            app:layout_constraintLeft_toRightOf="@id/writing_delivery_button"
            app:layout_constraintTop_toBottomOf="@id/writing_location_textView" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/writing_recyclerView"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/writing_gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/writing_category_textView" />

        <TextView
            android:id="@+id/writing_content_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/content"
            android:textColor="@color/black"
            android:textSize="15sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/writing_recyclerView" />

        <EditText
            android:id="@+id/writing_content_editText"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/writing_content_textView" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>