<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".profile.view.EditPasswordFragment">

    <data>
        <variable
            name="editProfileViewModel"
            type="com.honchipay.honchi_android.profile.viewmodel.EditProfileViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageButton
            android:id="@+id/signUpPassword_back_button3"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginStart="22dp"
            android:layout_marginTop="6dp"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_round_arrow_back_ios_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/signUpPassword_title_textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="34dp"
            android:text="@string/change_password"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signUpPassword_back_button3" />

        <TextView
            android:id="@+id/signUpPassword_password_textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="45dp"
            android:layout_marginTop="96dp"
            android:text="@string/to_change_password"
            android:textColor="@color/black"
            android:textSize="10sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signUpPassword_title_textView3"
            tools:ignore="SmallSp" />

        <EditText
            android:id="@+id/signUpPassword_password_editText3"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="7dp"
            android:layout_marginEnd="40dp"
            android:background="@drawable/sign_transparent_btn"
            android:hint="@string/to_change_input_password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:paddingStart="10dp"
            android:paddingEnd="0dp"
            android:text="@={editProfileViewModel.password}"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signUpPassword_password_textView3" />

        <TextView
            android:id="@+id/signUpPassword_confirm_textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="45dp"
            android:layout_marginTop="28dp"
            android:text="@string/check_password"
            android:textColor="@color/black"
            android:textSize="10sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signUpPassword_password_editText3"
            tools:ignore="SmallSp" />

        <EditText
            android:id="@+id/signUpPassword_confirm_editText3"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="40dp"
            android:text="@={editProfileViewModel.confirm}"
            android:background="@drawable/sign_transparent_btn"
            android:hint="@string/password_again"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:paddingStart="10dp"
            android:paddingEnd="0dp"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signUpPassword_confirm_textView3" />

        <Button
            android:id="@+id/signUpPassword_next_button3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="97dp"
            android:background="@drawable/sign_login_btn"
            android:onClick="@{() -> editProfileViewModel.changeUserPassword()}"
            android:text="@string/to_change"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>